--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,29 +1,28 @@
 <%- include("partials/header.ejs") %>
   <% let count = 1 %>
     <div class="col mb-5">
-      <div class="x mt-3">
+      <div class="headbg mt-3">
         <ul class="nav nav-pills justify-content-center pt-4">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
+            <a class="nav-link active" aria-current="page" href="/search/<%= keyword %>">All Results</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/search/song/<%= keyword %>">Songs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/search/artist/<%= keyword %>">Artists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="/search/album/<%= keyword %>">Albums</a>
           </li>
         </ul>
+      <% if(searchartist.length> 0){ %>
       <div class="album mt-2">
-        <div class="container-fluid pt-4">
+        <div class="container-fluid  py-4">
           <div class="d-flex">
-            <% if(searchartist.length> 0){ %>
               <h1 class="category searchbg py-3 px-3">ARTISTS
                 <span class="thinword">(<%= searchartist.length %>)</span>
               </h1>
-              <% } %>
           </div>
           <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
             <% searchartist.slice(0,6).forEach(function(searchartist){ %>
@@ -46,14 +45,14 @@
           </div>
         </div>
       </div>
+      <% } %>
+      <% if(searchalbum.length> 0){ %>
       <div class="album mt-2">
-        <div class="container-fluid pt-4">
+        <div class="container-fluid">
           <div class="d-flex">
-            <% if(searchalbum.length> 0){ %>
               <h1 class="category searchbg py-3 px-3">ALBUMS
                 <span class="thinword">(<%= searchalbum.length %>)</span>
               </h1>
-              <% } %>
           </div>
           <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
             <% searchalbum.slice(0,6).forEach(function(searchalbum){ %>
@@ -76,14 +75,14 @@
           </div>
         </div>
       </div>
+      <% } %>
+      <% if(searchsong.length > 0){ %>
       <div class="album mt-2">
         <div class="container-fluid py-4">
           <div class="d-flex">
-            <% if(searchsong.length > 0){ %>
               <h1 class="category searchbg py-3 px-3">SONGS
                 <span class="thinword">(<%= searchsong.length %>)</span>
               </h1>
-              <% } %>
           </div>
           <table class="table searchbg text-white text-center mb-0 sortable">
             <% if(searchsong.length > 0){ %>
@@ -122,7 +121,7 @@
                         </td>
                         <td>
                           <div class="pt-4">
-                            <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                            <a class="text-white text-decoration-none" href="/artist/<%= searchsong.artist.id %>">
                               <%= searchsong.artist.name %>
                             </a>
                           </div>
@@ -141,6 +140,33 @@
                             </span>
                           </div>
                         </td>
+                        <td>
+                          <div class="option my-4 mx-2">
+                            <i class="fa-solid fa-play"></i>
+                            <% if(currentUser) { %>
+                              <% if(usersong.includes(searchsong.id)){ %>
+                            <form action="/user/unfavourite/<%= searchsong.id %>" method="post" class="d-inline">
+                                <button class="mx-3 bg-transparent border-0"> 
+                                  <i class="fa-solid fa-star mx-3 starbg"></i>
+                                </button>
+                            </form>
+                            <% } else { %>
+                              <form action="/user/favourite/<%= searchsong.id %>" method="post" class="d-inline">
+                                <button class="mx-3 bg-transparent border-0"> 
+                                  <i class="fa-solid fa-star mx-3"></i>
+                                </button>
+                            </form>
+                            <% } %>
+                            <% } else { %>
+                              <form action="/user/favourite/<%= searchsong.id %>" method="post" class="d-inline">
+                                <button class="mx-3 bg-transparent border-0"> 
+                                  <i class="fa-solid fa-star mx-3"></i>
+                                </button>
+                            </form>
+                            <% } %>
+                            <i class="fa-solid fa-circle-plus"></i>
+                        </div>
+                        </td>
                     </tr>
                     <% }) %>
                     <% searchsong.slice(8,searchsong.length).forEach(function(searchsong){ %>
@@ -156,7 +182,7 @@
                           </td>
                           <td>
                             <div class="pt-4">
-                              <a class="text-white text-decoration-none" href="/album/<%= searchsong.album.id %>">
+                              <a class="text-white text-decoration-none" href="/artist/<%= searchsong.artist.id %>">
                                 <%= searchsong.artist.name %>
                               </a>
                             </div>
@@ -175,6 +201,17 @@
                               </span>
                             </div>
                           </td>
+                          <td>
+                            <div class="option my-4 mx-2">
+                              <i class="fa-solid fa-play"></i>
+                              <form action="/user/favourite/<%= searchsong.id %>" method="post" class="d-inline">
+                                  <button class="mx-3 bg-transparent border-0"> 
+                                      <i class="fa-solid fa-star mx-3"></i>
+                                  </button>
+                              </form>
+                              <i class="fa-solid fa-circle-plus"></i>
+                          </div>
+                          </td>
                       </tr>
                       <% }) %>
                 </tbody>
@@ -188,15 +225,15 @@
           <% } %>
         </div>
       </div>
+      <% } %>
       <% if(searchsong.length===0 && searchartist.length===0 && searchalbum.length===0){ %>
-        <div class="squarebox text-center">
+        <div class="squarebox text-center mt-3">
             <div class="t text-white">
               <img class="py-2" src="/image/icons/scope.png" width="30px">
-              <h2>0 result for " <%= keyword %> "</h2>
+              <h2>0 Result for " <%= keyword %> "</h2>
             </div>
         </div>
         <% } %>
-        
     </div>
     </div>
 
