--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -75,24 +75,30 @@
     left: 100%;
 }
 
-.shadows{
+.shadows {
     background-color: transparent;
     border: none;
 }
-.shadows:hover{
+
+.shadows:hover {
     background-color: transparent;
     background-color: rgba(164, 164, 164, 0.3);
     border: none;
 }
-.profilebg{
+
+.profilebg {
     background-color: rgba(0, 0, 0, 0.4);
 }
-.searchbg,.showmore{
+
+.searchbg,
+.showmore {
     background-color: rgba(0, 0, 0, 0.25);
 }
+
 .card-body {
     padding: 0.5rem;
 }
+
 .songinfo--img,
 .albuminfo--img {
     height: 9rem;
@@ -116,7 +122,7 @@
 .songimg {
     height: 4.5rem;
     object-fit: cover;
-        margin-left: 2rem;
+    margin-left: 2rem;
     margin-right: 2rem;
     aspect-ratio: 1/1;
 }
@@ -177,7 +183,8 @@
     color: #B6B6B6;
 }
 
-.song--artist:hover, .album--album:hover {
+.song--artist:hover,
+.album--album:hover {
     text-decoration: underline;
     font-size: 1.6vh;
     font-weight: bold;
@@ -211,7 +218,8 @@
     color: #B6B6B6;
 }
 
-.songkit--up__artist:hover, .albumkit--up__artist:hover{
+.songkit--up__artist:hover,
+.albumkit--up__artist:hover {
     text-decoration: underline;
     font-size: 1rem;
     font-weight: bold;
@@ -235,24 +243,30 @@
     padding: 0.4rem;
     height: 2rem;
 }
-.fa-star{
+
+.fa-star {
     color: white;
 }
-.addbtn,.favbtn {
-    color: white;
-    display: inline;
-    width: 30px;
-    height: 30px;
-}
-.favbtn-click{
+
+.addbtn,
+.favbtn {
     color: white;
     display: inline;
     width: 30px;
     height: 30px;
 }
-.hidden{
+
+.favbtn-click {
+    color: white;
+    display: inline;
+    width: 30px;
+    height: 30px;
+}
+
+.hidden {
     display: none;
 }
+
 .seeall {
     font-size: 15px;
     color: #A5A5A5;
@@ -322,14 +336,16 @@ tr {
 
 .option {
     /* padding-top: 7%; */
-    display: inline-block;
+    /* display: inline-block; */
+    text-align: center;
 }
+
 .songlist {
     width: 100%;
 }
 
 .songorder {
-    width: 3rem;
+    width: 0.9rem;
 }
 
 .dropdown-item:hover {
@@ -367,7 +383,7 @@ tr {
     aspect-ratio: 1/1;
 }
 
-.profileimg{
+.profileimg {
     height: 100%;
     width: 9rem;
     border-radius: 50%;
@@ -378,9 +394,11 @@ tr {
     padding-bottom: 1rem;
     text-align: center;
 }
+
 .account-settings .user-profile .user-avatar {
     margin: 0 0 1rem 0;
 }
+
 .account-settings .user-profile .user-avatar img {
     width: 90px;
     height: 90px;
@@ -388,9 +406,11 @@ tr {
     -moz-border-radius: 100px;
     border-radius: 100px;
 }
+
 .account-settings .user-profile h5.user-name {
     margin: 0 0 0.5rem 0;
 }
+
 .account-settings .user-profile h6.user-email {
     margin: 0;
     font-size: 0.8rem;
@@ -408,50 +428,69 @@ tr {
     color: #2e323c;
 } */
 
-.fa-user{
+.fa-user {
     color: rgb(255, 255, 255);
 }
-.fa-star{
-    font-size: 30px;
-}
-.fa-star:active{
-    font-size: 30px;
-    color: rgb(255, 0, 0);
-}
-.addbg{
+
+.addbg {
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 30px;
 }
-.x{
+
+.headbg {
     background-color: rgba(0, 0, 0, 0.2);
 }
-.thinword{
+
+.thinword {
     color: #A5A5A5;
 }
-.squarebox{
+
+.squarebox {
     height: 660px;
     background-color: rgba(0, 0, 0, 0.3);
     justify-content: center;
     vertical-align: middle;
 }
-.table > :not(:first-child) {
+
+.table> :not(:first-child) {
     border-top: 0;
 }
-.fullrow{
+
+.fullrow {
     width: 100%;
 }
+
 div.squarebox {
     height: 660px;
-    position: relative }
+    position: relative
+}
+
 div.squarebox .t {
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) }
-.fa-timer{
+    transform: translate(-50%, -50%)
+}
+.starbg{
+    color: #00FFFF;
+}
+.fa-timer {
     color: white;
+}
+.nav-link {
+    color: #00FFFF;
+}
+.nav-link:hover {
+    color: #ffffff;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #06dcdc;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: rgb(0, 0, 0);
 }
 @keyframes glow {
     from {
